deploy(2st lil fix)